core/gen/cellParser.py
# Generated from cell.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class cellParser ( Parser ):

    grammarFileName = "cell.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'='", "'.'", "','", "';'", "':'", "'::'", "'?'", "'&'", 
                     "'!'", "'->'", "'<-'", "'=>'", "'@'", "<INVALID>", 
                     "<INVALID>", "'++'", "'--'", "<INVALID>", "'if'", "'else'", 
                     "'while'", "'for'", "'import'", "'from'", "'class'", 
                     "'new'", "'override'", "'public'", "'private'", "'task'", 
                     "'resume'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'null'" ]

    symbolicNames = [ "<INVALID>", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LLIST", "RLIST", "EQUALS", "DOT", "COMMA", "SEMI", 
                      "COLON", "DOUBLECOLONS", "QUESTION", "AMPERSAND", 
                      "EXCLAM", "LARROW", "RARROW", "ARROWASSIGN", "AT", 
                      "OPERATORS", "ASSIGNOPS", "INCR", "DECR", "FUNC", 
                      "IF", "ELSE", "WHILE", "FOR", "IMPORT", "FROM", "CLASS", 
                      "NEW", "OVERRIDE", "PUBLIC", "PRIVATE", "TASK", "TASK_RESUME", 
                      "COMMENT", "WS", "BOOL", "NULL", "ID", "INT", "FLOAT", 
                      "STRING", "TYPE" ]

    RULE_parse = 0
    RULE_stmts = 1
    RULE_stmt = 2
    RULE_if_stmt = 3
    RULE_while_stmt = 4
    RULE_for_stmt = 5
    RULE_varassignment = 6
    RULE_funcassignment = 7
    RULE_conditional_block = 8
    RULE_stmt_block = 9
    RULE_call = 10
    RULE_args = 11
    RULE_params = 12
    RULE_type_conversion = 13
    RULE_mem_addr = 14
    RULE_getattribs = 15
    RULE_task_usage = 16
    RULE_array = 17
    RULE_expr = 18

    ruleNames =  [ "parse", "stmts", "stmt", "if_stmt", "while_stmt", "for_stmt", 
                   "varassignment", "funcassignment", "conditional_block", 
                   "stmt_block", "call", "args", "params", "type_conversion", 
                   "mem_addr", "getattribs", "task_usage", "array", "expr" ]

    EOF = Token.EOF
    LPAREN=1
    RPAREN=2
    LBRACE=3
    RBRACE=4
    LLIST=5
    RLIST=6
    EQUALS=7
    DOT=8
    COMMA=9
    SEMI=10
    COLON=11
    DOUBLECOLONS=12
    QUESTION=13
    AMPERSAND=14
    EXCLAM=15
    LARROW=16
    RARROW=17
    ARROWASSIGN=18
    AT=19
    OPERATORS=20
    ASSIGNOPS=21
    INCR=22
    DECR=23
    FUNC=24
    IF=25
    ELSE=26
    WHILE=27
    FOR=28
    IMPORT=29
    FROM=30
    CLASS=31
    NEW=32
    OVERRIDE=33
    PUBLIC=34
    PRIVATE=35
    TASK=36
    TASK_RESUME=37
    COMMENT=38
    WS=39
    BOOL=40
    NULL=41
    ID=42
    INT=43
    FLOAT=44
    STRING=45
    TYPE=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(cellParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cellParser.StmtContext)
            else:
                return self.getTypedRuleContext(cellParser.StmtContext,i)


        def getRuleIndex(self):
            return cellParser.RULE_parse

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = cellParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 69329815658530) != 0:
                self.state = 38
                self.stmt()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(cellParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cellParser.StmtContext)
            else:
                return self.getTypedRuleContext(cellParser.StmtContext,i)


        def getRuleIndex(self):
            return cellParser.RULE_stmts

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmts" ):
                return visitor.visitStmts(self)
            else:
                return visitor.visitChildren(self)




    def stmts(self):

        localctx = cellParser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmts)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 69329815658530) != 0:
                self.state = 46
                self.stmt()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stmt(self):
            return self.getTypedRuleContext(cellParser.If_stmtContext,0)


        def SEMI(self):
            return self.getToken(cellParser.SEMI, 0)

        def while_stmt(self):
            return self.getTypedRuleContext(cellParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(cellParser.For_stmtContext,0)


        def varassignment(self):
            return self.getTypedRuleContext(cellParser.VarassignmentContext,0)


        def funcassignment(self):
            return self.getTypedRuleContext(cellParser.FuncassignmentContext,0)


        def expr(self):
            return self.getTypedRuleContext(cellParser.ExprContext,0)


        def call(self):
            return self.getTypedRuleContext(cellParser.CallContext,0)


        def getRuleIndex(self):
            return cellParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = cellParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.if_stmt()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 53
                    self.match(cellParser.SEMI)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.while_stmt()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 57
                    self.match(cellParser.SEMI)


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.for_stmt()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 61
                    self.match(cellParser.SEMI)


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 64
                self.varassignment()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 65
                    self.match(cellParser.SEMI)


                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                self.funcassignment()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 69
                    self.match(cellParser.SEMI)


                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 72
                self.expr(0)
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 73
                    self.match(cellParser.SEMI)


                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 76
                self.call()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 77
                    self.match(cellParser.SEMI)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(cellParser.IF)
            else:
                return self.getToken(cellParser.IF, i)

        def conditional_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cellParser.Conditional_blockContext)
            else:
                return self.getTypedRuleContext(cellParser.Conditional_blockContext,i)


        def stmt_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cellParser.Stmt_blockContext)
            else:
                return self.getTypedRuleContext(cellParser.Stmt_blockContext,i)


        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(cellParser.ELSE)
            else:
                return self.getToken(cellParser.ELSE, i)

        def getRuleIndex(self):
            return cellParser.RULE_if_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stmt" ):
                return visitor.visitIf_stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_stmt(self):

        localctx = cellParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(cellParser.IF)
            self.state = 83
            self.conditional_block()
            self.state = 84
            self.stmt_block()
            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 85
                    self.match(cellParser.ELSE)
                    self.state = 86
                    self.match(cellParser.IF)
                    self.state = 87
                    self.conditional_block()
                    self.state = 88
                    self.stmt_block() 
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 95
                self.match(cellParser.ELSE)
                self.state = 96
                self.stmt_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(cellParser.WHILE, 0)

        def conditional_block(self):
            return self.getTypedRuleContext(cellParser.Conditional_blockContext,0)


        def stmt_block(self):
            return self.getTypedRuleContext(cellParser.Stmt_blockContext,0)


        def getRuleIndex(self):
            return cellParser.RULE_while_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stmt" ):
                return visitor.visitWhile_stmt(self)
            else:
                return visitor.visitChildren(self)




    def while_stmt(self):

        localctx = cellParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(cellParser.WHILE)
            self.state = 100
            self.conditional_block()
            self.state = 101
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(cellParser.FOR, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(cellParser.ID)
            else:
                return self.getToken(cellParser.ID, i)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(cellParser.SEMI)
            else:
                return self.getToken(cellParser.SEMI, i)

        def conditional_block(self):
            return self.getTypedRuleContext(cellParser.Conditional_blockContext,0)


        def stmt_block(self):
            return self.getTypedRuleContext(cellParser.Stmt_blockContext,0)


        def INCR(self):
            return self.getToken(cellParser.INCR, 0)

        def DECR(self):
            return self.getToken(cellParser.DECR, 0)

        def getRuleIndex(self):
            return cellParser.RULE_for_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_stmt" ):
                return visitor.visitFor_stmt(self)
            else:
                return visitor.visitChildren(self)




    def for_stmt(self):

        localctx = cellParser.For_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_for_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(cellParser.FOR)
            self.state = 104
            self.match(cellParser.ID)
            self.state = 105
            self.match(cellParser.SEMI)
            self.state = 106
            self.conditional_block()
            self.state = 107
            self.match(cellParser.SEMI)
            self.state = 108
            self.match(cellParser.ID)
            self.state = 109
            _la = self._input.LA(1)
            if not(_la==22 or _la==23):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 110
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarassignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.atype = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(cellParser.ID)
            else:
                return self.getToken(cellParser.ID, i)

        def expr(self):
            return self.getTypedRuleContext(cellParser.ExprContext,0)


        def EQUALS(self):
            return self.getToken(cellParser.EQUALS, 0)

        def QUESTION(self):
            return self.getToken(cellParser.QUESTION, 0)

        def ASSIGNOPS(self):
            return self.getToken(cellParser.ASSIGNOPS, 0)

        def getRuleIndex(self):
            return cellParser.RULE_varassignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarassignment" ):
                return visitor.visitVarassignment(self)
            else:
                return visitor.visitChildren(self)




    def varassignment(self):

        localctx = cellParser.VarassignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varassignment)
        self._la = 0 # Token type
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                if la_ == 1:
                    self.state = 112
                    self.match(cellParser.ID)


                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 115
                    self.match(cellParser.QUESTION)


                self.state = 118
                self.match(cellParser.ID)
                self.state = 119
                localctx.atype = self.match(cellParser.EQUALS)
                self.state = 120
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                if la_ == 1:
                    self.state = 121
                    self.match(cellParser.ID)


                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 124
                    self.match(cellParser.QUESTION)


                self.state = 127
                self.match(cellParser.ID)
                self.state = 128
                localctx.atype = self.match(cellParser.ASSIGNOPS)
                self.state = 129
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncassignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(cellParser.ID)
            else:
                return self.getToken(cellParser.ID, i)

        def LPAREN(self):
            return self.getToken(cellParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(cellParser.RPAREN, 0)

        def stmt_block(self):
            return self.getTypedRuleContext(cellParser.Stmt_blockContext,0)


        def FUNC(self):
            return self.getToken(cellParser.FUNC, 0)

        def OVERRIDE(self):
            return self.getToken(cellParser.OVERRIDE, 0)

        def params(self):
            return self.getTypedRuleContext(cellParser.ParamsContext,0)


        def PUBLIC(self):
            return self.getToken(cellParser.PUBLIC, 0)

        def PRIVATE(self):
            return self.getToken(cellParser.PRIVATE, 0)

        def EQUALS(self):
            return self.getToken(cellParser.EQUALS, 0)

        def ARROWASSIGN(self):
            return self.getToken(cellParser.ARROWASSIGN, 0)

        def getRuleIndex(self):
            return cellParser.RULE_funcassignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncassignment" ):
                return visitor.visitFuncassignment(self)
            else:
                return visitor.visitChildren(self)




    def funcassignment(self):

        localctx = cellParser.FuncassignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcassignment)
        self._la = 0 # Token type
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,24,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==34 or _la==35:
                    self.state = 132
                    _la = self._input.LA(1)
                    if not(_la==34 or _la==35):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==33:
                    self.state = 135
                    self.match(cellParser.OVERRIDE)


                self.state = 138
                _la = self._input.LA(1)
                if not(_la==24 or _la==42):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 139
                self.match(cellParser.ID)
                self.state = 140
                self.match(cellParser.LPAREN)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==42:
                    self.state = 141
                    self.params()


                self.state = 144
                self.match(cellParser.RPAREN)
                self.state = 145
                self.stmt_block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
                if la_ == 1:
                    self.state = 146
                    self.match(cellParser.ID)


                self.state = 149
                self.match(cellParser.ID)
                self.state = 150
                self.match(cellParser.EQUALS)
                self.state = 151
                self.match(cellParser.LPAREN)
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==42:
                    self.state = 152
                    self.params()


                self.state = 155
                self.match(cellParser.RPAREN)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==34 or _la==35:
                    self.state = 156
                    _la = self._input.LA(1)
                    if not(_la==34 or _la==35):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==33:
                    self.state = 159
                    self.match(cellParser.OVERRIDE)


                self.state = 162
                self.match(cellParser.ARROWASSIGN)
                self.state = 163
                self.stmt_block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Conditional_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(cellParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(cellParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(cellParser.RPAREN, 0)

        def getRuleIndex(self):
            return cellParser.RULE_conditional_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional_block" ):
                return visitor.visitConditional_block(self)
            else:
                return visitor.visitChildren(self)




    def conditional_block(self):

        localctx = cellParser.Conditional_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_conditional_block)
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,25,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.match(cellParser.LPAREN)
                self.state = 167
                self.expr(0)
                self.state = 168
                self.match(cellParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(cellParser.LBRACE, 0)

        def stmts(self):
            return self.getTypedRuleContext(cellParser.StmtsContext,0)


        def RBRACE(self):
            return self.getToken(cellParser.RBRACE, 0)

        def getRuleIndex(self):
            return cellParser.RULE_stmt_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_block" ):
                return visitor.visitStmt_block(self)
            else:
                return visitor.visitChildren(self)




    def stmt_block(self):

        localctx = cellParser.Stmt_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmt_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(cellParser.LBRACE)
            self.state = 174
            self.stmts()
            self.state = 175
            self.match(cellParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(cellParser.ID, 0)

        def LPAREN(self):
            return self.getToken(cellParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(cellParser.RPAREN, 0)

        def args(self):
            return self.getTypedRuleContext(cellParser.ArgsContext,0)


        def getRuleIndex(self):
            return cellParser.RULE_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = cellParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(cellParser.ID)
            self.state = 178
            self.match(cellParser.LPAREN)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 69269233123362) != 0:
                self.state = 179
                self.args()


            self.state = 182
            self.match(cellParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cellParser.ExprContext)
            else:
                return self.getTypedRuleContext(cellParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(cellParser.COMMA)
            else:
                return self.getToken(cellParser.COMMA, i)

        def getRuleIndex(self):
            return cellParser.RULE_args

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = cellParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.expr(0)
            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 185
                self.match(cellParser.COMMA)
                self.state = 186
                self.expr(0)
                self.state = 191
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(cellParser.ID)
            else:
                return self.getToken(cellParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(cellParser.COMMA)
            else:
                return self.getToken(cellParser.COMMA, i)

        def getRuleIndex(self):
            return cellParser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):
